# chatlectify

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  SPEC.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  security.yml
scripts/: bundle_assets.py
src/chatlectify/: benchmark.py  clean.py  cli.py  emit.py  features.py  gates.py  ingest.py  llm.py  schemas.py  synth.py
src/chatlectify/assets/: antiexemplars.txt  baseline_prompts.txt  dict_words.txt  hedges.txt  verbs_top500.txt
tests/: test_benchmark.py  test_clean.py  test_e2e.py  test_emit.py  test_features.py  test_gates.py  test_ingest.py  test_synth.py
tests/fixtures/: chatgpt_export.json  claude_export.json
