[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatlectify"
version = "0.1.0"
description = "Compile your AI chat history into a writing-style skill."
license = {text = "MIT"}
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "anthropic>=0.39",
    "openai>=1.40",
    "tiktoken>=0.7",
    "regex>=2024.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
chatlectify = "chatlectify.cli:app"

[project.urls]
Homepage = "https://chatlectify.dev"
Repository = "https://github.com/chatlectify/chatlectify"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
chatlectify = ["assets/*.txt"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
